// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner large size loading=false renders correctly 1`] = `
.c0 {
  position: relative;
  color: inherit;
}

<div
  className="c0 rovna-ui-spinner rovna-ui-spinner-size-large"
  data-testid="rovna-ui-spinner"
>
  <span
    className=""
  >
    Children
  </span>
</div>
`;

exports[`Spinner large size with black color renders correctly 1`] = `
.c1 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: rotate 1s linear infinite, bZrHZd 1s linear infinite;
  animation: rotate 1s linear infinite, bZrHZd 1s linear infinite;
}

.c0 {
  position: relative;
  color: black;
}

<div
  className="c0 rovna-ui-spinner rovna-ui-spinner-loading rovna-ui-spinner-size-large"
  data-testid="rovna-ui-spinner"
>
  <svg
    className=""
    height={64}
    width={64}
  >
    <circle
      className="c1"
      cx={32}
      cy={32}
      fill="none"
      r={27}
      stroke="currentColor"
      strokeDasharray={170}
      strokeDashoffset={127.5}
      strokeLinecap="round"
      strokeWidth={5}
    />
  </svg>
</div>
`;

exports[`Spinner large size with children renders correctly 1`] = `
.c3 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: rotate 1s linear infinite, bZrHZd 1s linear infinite;
  animation: rotate 1s linear infinite, bZrHZd 1s linear infinite;
}

.c0 {
  position: relative;
  color: inherit;
}

.c2 {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c1 {
  pointer-events: none;
}

<div
  className="c0 rovna-ui-spinner rovna-ui-spinner-loading rovna-ui-spinner-size-large"
  data-testid="rovna-ui-spinner"
>
  <span
    className="c1"
  >
    Children
  </span>
  <svg
    className="c2"
    height={64}
    width={64}
  >
    <circle
      className="c3"
      cx={32}
      cy={32}
      fill="none"
      r={27}
      stroke="currentColor"
      strokeDasharray={170}
      strokeDashoffset={127.5}
      strokeLinecap="round"
      strokeWidth={5}
    />
  </svg>
</div>
`;

exports[`Spinner large size with white color renders correctly 1`] = `
.c1 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: rotate 1s linear infinite, bZrHZd 1s linear infinite;
  animation: rotate 1s linear infinite, bZrHZd 1s linear infinite;
}

.c0 {
  position: relative;
  color: white;
}

<div
  className="c0 rovna-ui-spinner rovna-ui-spinner-loading rovna-ui-spinner-size-large"
  data-testid="rovna-ui-spinner"
>
  <svg
    className=""
    height={64}
    width={64}
  >
    <circle
      className="c1"
      cx={32}
      cy={32}
      fill="none"
      r={27}
      stroke="currentColor"
      strokeDasharray={170}
      strokeDashoffset={127.5}
      strokeLinecap="round"
      strokeWidth={5}
    />
  </svg>
</div>
`;

exports[`Spinner large size with yellow color renders correctly 1`] = `
.c1 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: rotate 1s linear infinite, bZrHZd 1s linear infinite;
  animation: rotate 1s linear infinite, bZrHZd 1s linear infinite;
}

.c0 {
  position: relative;
  color: yellow;
}

<div
  className="c0 rovna-ui-spinner rovna-ui-spinner-loading rovna-ui-spinner-size-large"
  data-testid="rovna-ui-spinner"
>
  <svg
    className=""
    height={64}
    width={64}
  >
    <circle
      className="c1"
      cx={32}
      cy={32}
      fill="none"
      r={27}
      stroke="currentColor"
      strokeDasharray={170}
      strokeDashoffset={127.5}
      strokeLinecap="round"
      strokeWidth={5}
    />
  </svg>
</div>
`;

exports[`Spinner medium size loading=false renders correctly 1`] = `
.c0 {
  position: relative;
  color: inherit;
}

<div
  className="c0 rovna-ui-spinner rovna-ui-spinner-size-medium"
  data-testid="rovna-ui-spinner"
>
  <span
    className=""
  >
    Children
  </span>
</div>
`;

exports[`Spinner medium size with black color renders correctly 1`] = `
.c1 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: rotate 1s linear infinite, hVDAzB 1s linear infinite;
  animation: rotate 1s linear infinite, hVDAzB 1s linear infinite;
}

.c0 {
  position: relative;
  color: black;
}

<div
  className="c0 rovna-ui-spinner rovna-ui-spinner-loading rovna-ui-spinner-size-medium"
  data-testid="rovna-ui-spinner"
>
  <svg
    className=""
    height={48}
    width={48}
  >
    <circle
      className="c1"
      cx={24}
      cy={24}
      fill="none"
      r={20}
      stroke="currentColor"
      strokeDasharray={126}
      strokeDashoffset={94.5}
      strokeLinecap="round"
      strokeWidth={4}
    />
  </svg>
</div>
`;

exports[`Spinner medium size with children renders correctly 1`] = `
.c3 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: rotate 1s linear infinite, hVDAzB 1s linear infinite;
  animation: rotate 1s linear infinite, hVDAzB 1s linear infinite;
}

.c0 {
  position: relative;
  color: inherit;
}

.c2 {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c1 {
  pointer-events: none;
}

<div
  className="c0 rovna-ui-spinner rovna-ui-spinner-loading rovna-ui-spinner-size-medium"
  data-testid="rovna-ui-spinner"
>
  <span
    className="c1"
  >
    Children
  </span>
  <svg
    className="c2"
    height={48}
    width={48}
  >
    <circle
      className="c3"
      cx={24}
      cy={24}
      fill="none"
      r={20}
      stroke="currentColor"
      strokeDasharray={126}
      strokeDashoffset={94.5}
      strokeLinecap="round"
      strokeWidth={4}
    />
  </svg>
</div>
`;

exports[`Spinner medium size with white color renders correctly 1`] = `
.c1 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: rotate 1s linear infinite, hVDAzB 1s linear infinite;
  animation: rotate 1s linear infinite, hVDAzB 1s linear infinite;
}

.c0 {
  position: relative;
  color: white;
}

<div
  className="c0 rovna-ui-spinner rovna-ui-spinner-loading rovna-ui-spinner-size-medium"
  data-testid="rovna-ui-spinner"
>
  <svg
    className=""
    height={48}
    width={48}
  >
    <circle
      className="c1"
      cx={24}
      cy={24}
      fill="none"
      r={20}
      stroke="currentColor"
      strokeDasharray={126}
      strokeDashoffset={94.5}
      strokeLinecap="round"
      strokeWidth={4}
    />
  </svg>
</div>
`;

exports[`Spinner medium size with yellow color renders correctly 1`] = `
.c1 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: rotate 1s linear infinite, hVDAzB 1s linear infinite;
  animation: rotate 1s linear infinite, hVDAzB 1s linear infinite;
}

.c0 {
  position: relative;
  color: yellow;
}

<div
  className="c0 rovna-ui-spinner rovna-ui-spinner-loading rovna-ui-spinner-size-medium"
  data-testid="rovna-ui-spinner"
>
  <svg
    className=""
    height={48}
    width={48}
  >
    <circle
      className="c1"
      cx={24}
      cy={24}
      fill="none"
      r={20}
      stroke="currentColor"
      strokeDasharray={126}
      strokeDashoffset={94.5}
      strokeLinecap="round"
      strokeWidth={4}
    />
  </svg>
</div>
`;

exports[`Spinner small size loading=false renders correctly 1`] = `
.c0 {
  position: relative;
  color: inherit;
}

<div
  className="c0 rovna-ui-spinner rovna-ui-spinner-size-small"
  data-testid="rovna-ui-spinner"
>
  <span
    className=""
  >
    Children
  </span>
</div>
`;

exports[`Spinner small size with black color renders correctly 1`] = `
.c1 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: rotate 1s linear infinite, bZvmNJ 1s linear infinite;
  animation: rotate 1s linear infinite, bZvmNJ 1s linear infinite;
}

.c0 {
  position: relative;
  color: black;
}

<div
  className="c0 rovna-ui-spinner rovna-ui-spinner-loading rovna-ui-spinner-size-small"
  data-testid="rovna-ui-spinner"
>
  <svg
    className=""
    height={32}
    width={32}
  >
    <circle
      className="c1"
      cx={16}
      cy={16}
      fill="none"
      r={13}
      stroke="currentColor"
      strokeDasharray={82}
      strokeDashoffset={61.5}
      strokeLinecap="round"
      strokeWidth={3}
    />
  </svg>
</div>
`;

exports[`Spinner small size with children renders correctly 1`] = `
.c3 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: rotate 1s linear infinite, bZvmNJ 1s linear infinite;
  animation: rotate 1s linear infinite, bZvmNJ 1s linear infinite;
}

.c0 {
  position: relative;
  color: inherit;
}

.c2 {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c1 {
  pointer-events: none;
}

<div
  className="c0 rovna-ui-spinner rovna-ui-spinner-loading rovna-ui-spinner-size-small"
  data-testid="rovna-ui-spinner"
>
  <span
    className="c1"
  >
    Children
  </span>
  <svg
    className="c2"
    height={32}
    width={32}
  >
    <circle
      className="c3"
      cx={16}
      cy={16}
      fill="none"
      r={13}
      stroke="currentColor"
      strokeDasharray={82}
      strokeDashoffset={61.5}
      strokeLinecap="round"
      strokeWidth={3}
    />
  </svg>
</div>
`;

exports[`Spinner small size with white color renders correctly 1`] = `
.c1 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: rotate 1s linear infinite, bZvmNJ 1s linear infinite;
  animation: rotate 1s linear infinite, bZvmNJ 1s linear infinite;
}

.c0 {
  position: relative;
  color: white;
}

<div
  className="c0 rovna-ui-spinner rovna-ui-spinner-loading rovna-ui-spinner-size-small"
  data-testid="rovna-ui-spinner"
>
  <svg
    className=""
    height={32}
    width={32}
  >
    <circle
      className="c1"
      cx={16}
      cy={16}
      fill="none"
      r={13}
      stroke="currentColor"
      strokeDasharray={82}
      strokeDashoffset={61.5}
      strokeLinecap="round"
      strokeWidth={3}
    />
  </svg>
</div>
`;

exports[`Spinner small size with yellow color renders correctly 1`] = `
.c1 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: rotate 1s linear infinite, bZvmNJ 1s linear infinite;
  animation: rotate 1s linear infinite, bZvmNJ 1s linear infinite;
}

.c0 {
  position: relative;
  color: yellow;
}

<div
  className="c0 rovna-ui-spinner rovna-ui-spinner-loading rovna-ui-spinner-size-small"
  data-testid="rovna-ui-spinner"
>
  <svg
    className=""
    height={32}
    width={32}
  >
    <circle
      className="c1"
      cx={16}
      cy={16}
      fill="none"
      r={13}
      stroke="currentColor"
      strokeDasharray={82}
      strokeDashoffset={61.5}
      strokeLinecap="round"
      strokeWidth={3}
    />
  </svg>
</div>
`;

exports[`Spinner xs size loading=false renders correctly 1`] = `
.c0 {
  position: relative;
  color: inherit;
}

<div
  className="c0 rovna-ui-spinner rovna-ui-spinner-size-xs"
  data-testid="rovna-ui-spinner"
>
  <span
    className=""
  >
    Children
  </span>
</div>
`;

exports[`Spinner xs size with black color renders correctly 1`] = `
.c1 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: rotate 1s linear infinite, glgABt 1s linear infinite;
  animation: rotate 1s linear infinite, glgABt 1s linear infinite;
}

.c0 {
  position: relative;
  color: black;
}

<div
  className="c0 rovna-ui-spinner rovna-ui-spinner-loading rovna-ui-spinner-size-xs"
  data-testid="rovna-ui-spinner"
>
  <svg
    className=""
    height={16}
    width={16}
  >
    <circle
      className="c1"
      cx={8}
      cy={8}
      fill="none"
      r={6}
      stroke="currentColor"
      strokeDasharray={38}
      strokeDashoffset={28.5}
      strokeLinecap="round"
      strokeWidth={2}
    />
  </svg>
</div>
`;

exports[`Spinner xs size with children renders correctly 1`] = `
.c3 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: rotate 1s linear infinite, glgABt 1s linear infinite;
  animation: rotate 1s linear infinite, glgABt 1s linear infinite;
}

.c0 {
  position: relative;
  color: inherit;
}

.c2 {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c1 {
  pointer-events: none;
}

<div
  className="c0 rovna-ui-spinner rovna-ui-spinner-loading rovna-ui-spinner-size-xs"
  data-testid="rovna-ui-spinner"
>
  <span
    className="c1"
  >
    Children
  </span>
  <svg
    className="c2"
    height={16}
    width={16}
  >
    <circle
      className="c3"
      cx={8}
      cy={8}
      fill="none"
      r={6}
      stroke="currentColor"
      strokeDasharray={38}
      strokeDashoffset={28.5}
      strokeLinecap="round"
      strokeWidth={2}
    />
  </svg>
</div>
`;

exports[`Spinner xs size with white color renders correctly 1`] = `
.c1 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: rotate 1s linear infinite, glgABt 1s linear infinite;
  animation: rotate 1s linear infinite, glgABt 1s linear infinite;
}

.c0 {
  position: relative;
  color: white;
}

<div
  className="c0 rovna-ui-spinner rovna-ui-spinner-loading rovna-ui-spinner-size-xs"
  data-testid="rovna-ui-spinner"
>
  <svg
    className=""
    height={16}
    width={16}
  >
    <circle
      className="c1"
      cx={8}
      cy={8}
      fill="none"
      r={6}
      stroke="currentColor"
      strokeDasharray={38}
      strokeDashoffset={28.5}
      strokeLinecap="round"
      strokeWidth={2}
    />
  </svg>
</div>
`;

exports[`Spinner xs size with yellow color renders correctly 1`] = `
.c1 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: rotate 1s linear infinite, glgABt 1s linear infinite;
  animation: rotate 1s linear infinite, glgABt 1s linear infinite;
}

.c0 {
  position: relative;
  color: yellow;
}

<div
  className="c0 rovna-ui-spinner rovna-ui-spinner-loading rovna-ui-spinner-size-xs"
  data-testid="rovna-ui-spinner"
>
  <svg
    className=""
    height={16}
    width={16}
  >
    <circle
      className="c1"
      cx={8}
      cy={8}
      fill="none"
      r={6}
      stroke="currentColor"
      strokeDasharray={38}
      strokeDashoffset={28.5}
      strokeLinecap="round"
      strokeWidth={2}
    />
  </svg>
</div>
`;
